# advanced

./: CMakeLists.txt  README.md  advanced.code-workspace
CustomDFS/: CMakeLists.txt
Libraries/Combinatory/: CMakeLists.txt  Combinatory.cpp  Combinatory.h
Libraries/CustomDFS/: CustomDFS.cpp  CustomDFS.h
include/: advancedConfig.h.in
install/data/: input.txt
install/include/: Combinatory.h  CustomDFS.h  advancedConfig.h
src/: advanced.cpp  functions.txt  input.txt
